# recaf

./: Cargo.toml  README.md  hello_world.dcf
.github/workflows/: ci.yml  rust.yml
resources/snippets/: arith.dcf  condition.dcf  fibonacci.dcf  for.dcf  hello_world.dcf  loop.dcf  recursion.dcf
resources/snippets/semantic/: no_main.dcf
src/: ast.rs  cfg.rs  cli.rs  consts.rs  dominator.rs  error.rs  ir.rs  lib.rs  main.rs  semantic.rs  source_pos.rs
src/cfg/: build.rs  def.rs  draw.rs  mod.rs  optimize.rs  partial.rs
src/codegen/: genx86.rs  mem.rs  mod.rs  x86.rs
src/graph/: dominator.rs  mod.rs
src/parser/: ast.rs  grammar.lalrpop  lexer.rs  mod.rs  source_pos.rs  state.rs  util.rs
tests/: cfg.rs  dominator.rs  lexer.rs  parser.rs  semantic.rs
tests/common/: mod.rs
