[package]
name = "recaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
lalrpop-util = { version = "0.20.2", features = ["lexer"] } 
log = "0.4"
graphviz-rust = "0.9.0"
regex = "1.10.5"